Fix: Attempt to fix alignment issue on theme switcher button

--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -53,3 +53,11 @@
     border-radius: 50%;
     object-fit: cover;
 }
+
+.theme-switcher-btn{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+}
